--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   </header>
 
   <main class="container">
+    
+      <p> <strong>দেশের সেরা সাইট </strong></p>
     <section class="join-buttons">
       <a href="https://1xbet6767.netlify.app/" target="_blank" class="btn btn-1xbet">Join 1xBet Now</a>
       <a href="https://linebet-login.netlify.app/" target="_blank" class="btn btn-primary">Join Linebet Now</a>
