--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     
            <h1>দেশের সেরা সাইট ✅</h1>
     <section class="join-buttons">
-      <a href="https://1xbet6767.netlify.app/" target="_blank" class="btn btn-1xbet">Join 1xBet Now</a>
-      <a href="https://linebet-login.netlify.app/" target="_blank" class="btn btn-primary">Join Linebet Now</a>
-      <a href="https://melbet6767.netlify.app/" target="_blank" class="btn btn-primary">Join Melbet Now</a>
+      <a href="https://1xbet6767.netlify.app/" target="_blank" class="btn btn-1xbet">1xbet Register</a>
+      <a href="https://linebet-login.netlify.app/" target="_blank" class="btn btn-primary">Linebet Register</a>
+      <a href="https://melbet6767.netlify.app/" target="_blank" class="btn btn-primary">Melbet Register</a>
     </section>
 
     
