--- a/index.html
+++ b/index.html
@@ -3,41 +3,41 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Combo Betting Hub</title>
+  <title>এশিয়ার সেরা ব্যাটিং সাইট</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>Welcome to Club Earn BD</h1>
+    <h1>Welcome to Our Platfrom</h1>
     <p>Choose your platform & start winning!</p>
   </header>
 
   <div id="combo-container">
     <!-- 1xBet Section -->
     <section class="brand-section" id="x1bet">
-      <div class="tag-popular">🔥 Most Popular</div>
+      <div class="tag-popular"> Most Popular</div>
 
       <h2>1xBet</h2>
       <a href="https://1xbet6767.netlify.app/" class="join-btn" target="_blank">Join Now on 1xBet</a>
       <p class="payment-info">Payment: bKash, Nagad, Rocket</p>
       <div class="category-links">
-        <a href="https://1xbet6767.netlify.app/sports" target="_blank">Sports</a>
-        <a href="https://1xbet6767.netlify.app/casino" target="_blank">Casino</a>
-        <a href="https://1xbet6767.netlify.app/slots" target="_blank">Slots</a>
+        <a href="https://1xbet6767.netlify.app/" target="_blank">Sports</a>
+        <a href="https://1xbet6767.netlify.app/" target="_blank">Casino</a>
+        <a href="https://1xbet6767.netlify.app/" target="_blank">Slots</a>
       </div>
     </section>
 
     <!-- Linebet Section -->
     <section class="brand-section" id="linebet">
-      <div class="tag-popular">🔥 Most Popular</div>
+      <div class="tag-popular"> Most Popular</div>
 
       <h2>Linebet</h2>
       <a href="https://linebet-login.netlify.app/" class="join-btn" target="_blank">Join Now on Linebet</a>
       <p class="payment-info">Payment: bKash, Nagad, Rocket</p>
       <div class="category-links">
-        <a href="https://linebet-login.netlify.app/sports" target="_blank">Sports</a>
-        <a href="https://linebet-login.netlify.app/casino" target="_blank">Casino</a>
-        <a href="https://linebet-login.netlify.app/slots" target="_blank">Slots</a>
+        <a href="https://linebet-login.netlify.app/" target="_blank">Sports</a>
+        <a href="https://linebet-login.netlify.app/" target="_blank">Casino</a>
+        <a href="https://linebet-login.netlify.app/" target="_blank">Slots</a>
       </div>
     </section>
 
@@ -47,9 +47,9 @@
       <a href="https://melbet6767.netlify.app/" class="join-btn" target="_blank">Join Now on Melbet</a>
       <p class="payment-info">Payment: bKash, Nagad, Rocket</p>
       <div class="category-links">
-        <a href="https://melbet6767.netlify.app/sports" target="_blank">Sports</a>
-        <a href="https://melbet6767.netlify.app/casino" target="_blank">Casino</a>
-        <a href="https://melbet6767.netlify.app/slots" target="_blank">Slots</a>
+        <a href="https://melbet6767.netlify.app/" target="_blank">Sports</a>
+        <a href="https://melbet6767.netlify.app/" target="_blank">Casino</a>
+        <a href="https://melbet6767.netlify.app/" target="_blank">Slots</a>
       </div>
     </section>
 
@@ -59,9 +59,9 @@
       <a href="https://plnbet6767.netlify.app/" class="join-btn" target="_blank">Join Now on PlnBet</a>
       <p class="payment-info">Payment: bKash, Nagad, Rocket</p>
       <div class="category-links">
-        <a href="https://plnbet6767.netlify.app/sports" target="_blank">Sports</a>
-        <a href="https://plnbet6767.netlify.app/casino" target="_blank">Casino</a>
-        <a href="https://plnbet6767.netlify.app/slots" target="_blank">Slots</a>
+        <a href="https://plnbet6767.netlify.app/" target="_blank">Sports</a>
+        <a href="https://plnbet6767.netlify.app/" target="_blank">Casino</a>
+        <a href="https://plnbet6767.netlify.app/" target="_blank">Slots</a>
       </div>
     </section>
   </div>
