--- a/index.html
+++ b/index.html
@@ -72,6 +72,13 @@
     <p><strong>Promo Code:</strong> <span class="promo">Oxy11</span></p>
     <p><strong>Contact:</strong> <a href="tel:+8801826444505">+8801826444505</a> (Telegram / WhatsApp / IMO)</p>
   </section>
+  <!-- Telegram Join Button -->
+<div class="telegram-join">
+  <a href="https://t.me/+MeoTD85pHfo5YzU1" target="_blank">
+    <img src="https://img.icons8.com/color/48/telegram-app--v1.png" alt="Telegram" />
+    Join Our Telegram Group
+  </a>
+</div>
 
   <footer>
     <p>© 2025 Club Earn BD. All Rights Reserved.</p>
