--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 
     <!-- Melbet Section -->
     <section class="brand-section" id="melbet">
+      <div class="tag-popular"> Recommand</div>
+      
       <h2>Melbet</h2>
       <a href="https://melbet6767.netlify.app/" class="join-btn" target="_blank">Join Now on Melbet</a>
       <p class="payment-info">Payment: bKash, Nagad, Rocket</p>
