--- a/index.html
+++ b/index.html
@@ -40,6 +40,21 @@
         <a href="https://linebet-login.netlify.app/" target="_blank">Slots</a>
       </div>
     </section>
+    <section id="agent" class="agent-section">
+  <h2>💼 আপনার বিশ্বস্ত লোকাল এজেন্ট</h2>
+  <p>ডিপোজিট ও উইথড্র এখন খুব সহজ! আমার মাধ্যমে আপনি দ্রুত এবং নিরাপদভাবে লেনদেন করতে পারবেন ২৪/৭।</p>
+  
+  <div class="agent-features">
+    <ul>
+      <li>✅ 1xBet, Linebet, Melbet, PlnBet – সব সাইটের জন্য সাপোর্ট</li>
+      <li>💳 বিকাশ, নগদ, রকেট ও ব্যাংক ট্রান্সফার সুবিধা</li>
+      <li>⚡ ইনস্ট্যান্ট সার্ভিস – কোনো ঝামেলা ছাড়াই</li>
+      <li>🔒 ১০০% নিরাপদ ও বিশ্বস্ত লেনদেন</li>
+    </ul>
+  </div>
+
+  <a href="https://t.me/+MeoTD85pHfo5YzU1" class="btn-agent" target="_blank">📩 Telegram-এ সরাসরি যোগাযোগ করুন</a>
+    </section>
 
     <!-- Melbet Section -->
     <section class="brand-section" id="melbet">
