--- a/index.html
+++ b/index.html
@@ -25,6 +25,27 @@
         <a href="https://1xbet6767.netlify.app/" target="_blank">Casino</a>
         <a href="https://1xbet6767.netlify.app/" target="_blank">Slots</a>
       </div>
+      <section id="xbet" class="brand-section">
+  <h2>🎯 1xBet</h2>
+  
+  <div class="match-card">
+    <div class="teams">
+      <div class="team">
+        <img src="https://flagcdn.com/w80/br.png" alt="Brazil Flag">
+        <span>Brazil</span>
+      </div>
+      <div class="vs">VS</div>
+      <div class="team">
+        <img src="https://flagcdn.com/w80/ar.png" alt="Argentina Flag">
+        <span>Argentina</span>
+      </div>
+    </div>
+    <div class="odds">
+      <a href="https://1xbet6767.netlify.app/" target="_blank" class="odd-btn">1.85</a>
+      <a href="https://1xbet6767.netlify.app/" target="_blank" class="odd-btn">2.10</a>
+    </div>
+  </div>
+      </section>
     </section>
 
     <!-- Linebet Section -->
