--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section class="brand-section" id="x1bet">
       <div class="tag-popular"> Most Popular</div>
 
-      <h2>1xBet</h2>
+      <h2>1xbet</h2>
       <a href="https://1xbet6767.netlify.app/" class="join-btn" target="_blank">Join Now on 1xBet</a>
       <p class="payment-info">Payment: bKash, Nagad, Rocket</p>
       <div class="category-links">
@@ -41,14 +41,14 @@
       </div>
     </section>
     <section id="agent" class="agent-section">
-  <h2>💼 আপনার বিশ্বস্ত লোকাল এজেন্ট</h2>
+  <h2>♦️ লোকাল এজেন্ট ♦️</h2>
   <p>ডিপোজিট ও উইথড্র এখন খুব সহজ! আমার মাধ্যমে আপনি দ্রুত এবং নিরাপদভাবে লেনদেন করতে পারবেন ২৪/৭।</p>
   
   <div class="agent-features">
     <ul>
-      <li>✅ 1xBet, Linebet, Melbet, PlnBet – সব সাইটের জন্য সাপোর্ট</li>
+      <li>✅ 1xBet, Linebet, Melbet, PlanBet – সব সাইটের জন্য সাপোর্ট</li>
       <li>💳 বিকাশ, নগদ, রকেট ও ব্যাংক ট্রান্সফার সুবিধা</li>
-      <li>⚡ ইনস্ট্যান্ট সার্ভিস – কোনো ঝামেলা ছাড়াই</li>
+      <li>⚡ ইনস্ট্যান্ট পেমেন্ট – কোনো ঝামেলা ছাড়াই</li>
       <li>🔒 ১০০% নিরাপদ ও বিশ্বস্ত লেনদেন</li>
     </ul>
   </div>
@@ -72,7 +72,8 @@
 
     <!-- PlnBet Section -->
     <section class="brand-section" id="plnbet">
-      <h2>PlnBet</h2>
+      <div class="tag-popular"> New 🌍</div>
+      <h2>PlanBet</h2>
       <a href="https://plnbet6767.netlify.app/" class="join-btn" target="_blank">Join Now on PlnBet</a>
       <p class="payment-info">Payment: bKash, Nagad, Rocket</p>
       <div class="category-links">
