--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="tag-popular"> Most Popular</div>
 
       <h2>1xbet</h2>
-      <a href="https://1xbet6767.netlify.app/" class="join-btn" target="_blank">Join Now on 1xBet</a>
+      <a href="https://1xbet6767.netlify.app/" class="join-btn" target="_blank">Register👉 1xbet</a>
       <p class="payment-info">Payment: bKash, Nagad, Rocket</p>
       <div class="category-links">
         <a href="https://1xbet6767.netlify.app/" target="_blank">Sports</a>
@@ -38,7 +38,7 @@
       <div class="tag-popular"> Most Popular</div>
 
       <h2>Linebet</h2>
-      <a href="https://linebet-login.netlify.app/" class="join-btn" target="_blank">Join Now on Linebet</a>
+      <a href="https://linebet-login.netlify.app/" class="join-btn" target="_blank">Register👉 Linebet</a>
       <p class="payment-info">Payment: bKash, Nagad, Rocket</p>
       <div class="category-links">
         <a href="https://linebet-login.netlify.app/" target="_blank">Sports</a>
@@ -67,7 +67,7 @@
       <div class="tag-popular"> Recommand</div>
       
       <h2>Melbet</h2>
-      <a href="https://melbet6767.netlify.app/" class="join-btn" target="_blank">Join Now on Melbet</a>
+      <a href="https://melbet6767.netlify.app/" class="join-btn" target="_blank"> Register👉 Melbet</a>
       <p class="payment-info">Payment: bKash, Nagad, Rocket</p>
       <div class="category-links">
         <a href="https://melbet6767.netlify.app/" target="_blank">Sports</a>
@@ -80,7 +80,7 @@
     <section class="brand-section" id="plnbet">
       <div class="tag-popular"> New 🌍</div>
       <h2>PlanBet</h2>
-      <a href="https://plnbet6767.netlify.app/" class="join-btn" target="_blank">Join Now on PlnBet</a>
+      <a href="https://plnbet6767.netlify.app/" class="join-btn" target="_blank"> Register👉 Planbet</a>
       <p class="payment-info">Payment: bKash, Nagad, Rocket</p>
       <div class="category-links">
         <a href="https://plnbet6767.netlify.app/" target="_blank">Sports</a>
