--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <h3>Welcome to Our Platfrom</h3>
     <p>Choose your platform & start winning!</p>
   </header>
+  <marquee behavior="scroll" direction="left">
+  🚀 1xBet অফিশিয়াল প্রোমো কোড: Oxy11 | এখনই জয়েন করুন!
+  </marquee>
 
   <!-- Promo Code + Contact Section -->
   <section id="promo-section">
