--- a/index.html
+++ b/index.html
@@ -11,9 +11,35 @@
     <h3>Welcome to Our Platfrom</h3>
     <p>Choose your platform & start winning!</p>
   </header>
-  <marquee behavior="scroll" direction="left">
-  🚀 1xBet অফিশিয়াল প্রোমো কোড: Oxy11 | এখনই জয়েন করুন!
-  </marquee>
+<!DOCTYPE html>
+<html lang="bn">
+<head>
+  <meta charset="UTF-8">
+  <title>Marquee Example</title>
+  <style>
+    .marquee-wrapper {
+      background: linear-gradient(90deg, #0f172a, #1e3a8a);
+      padding: 10px 0;
+      color: #ffeb3b;
+      font-size: 18px;
+      font-weight: bold;
+      font-family: 'Arial', sans-serif;
+    }
+    marquee {
+      scrollamount: 6;
+    }
+  </style>
+</head>
+<body>
+
+  <div class="marquee-wrapper">
+    <marquee behavior="scroll" direction="left" scrollamount="6" onmouseover="this.stop()" onmouseout="this.start()">
+      🎯 1xBet | Linebet | Melbet | PlnBet — প্রোমো কোড: Oxy11 | 📞 যোগাযোগ: +8801826444505 | এখনই জয়েন করুন! 🎁
+    </marquee>
+  </div>
+
+</body>
+</html>
 
   <!-- Promo Code + Contact Section -->
   <section id="promo-section">
