--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
   <style>
     .marquee-wrapper {
       background: linear-gradient(90deg, #0f172a, #1e3a8a);
-      padding: 6px 0;
+      padding: 8px 0;
       color: #ffeb3b;
-      font-size: 11px;
+      font-size: 14px;
       font-weight: bold;
       font-family: 'Arial', sans-serif;
     }
@@ -34,7 +34,7 @@
 
   <div class="marquee-wrapper">
     <marquee behavior="scroll" direction="left" scrollamount="6" onmouseover="this.stop()" onmouseout="this.start()">
-      🎯 1xBet | Linebet | Melbet | PlnBet — প্রোমো কোড: Oxy11 | 📞 যোগাযোগ: +8801826444505 | এখনই জয়েন করুন! 🎁
+      📢 স্বাগতম ইন্টারন্যাশনাল ব্যাটিং প্লাটফর্মে 1xBet, Linebet, Melbet, PlnBet — নিচিন্তে একাউন্ট করুন নিজেই ডিপোজিট উইথড্র করুন । বিশেষ সুবিধা cash out সিস্টেম | এখনই জয়েন করুন! 🎁
     </marquee>
   </div>
 
