--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h3>Welcome to Our Platfrom</h3>
+    <h2>Welcome Oxy Club</h2>
     <p>Choose your platform & start winning!</p>
   </header>
 <!DOCTYPE html>
