--- a/index.html
+++ b/index.html
@@ -75,6 +75,21 @@
         <a href="https://linebet-login.netlify.app/" target="_blank">Slots</a>
       </div>
     </section>
+
+      <section id="promo-section">
+    <h2>আমার একটি আইডি লাগবে!</h2>
+        <h3>ফুল ভেরিফাইড করতে যা লাগবে </h3>
+        <ul>
+          <li>আপনার একটি এন্ড্রয়েড স্মার্ট ফোন লাগবে।</li>
+          <li>NID কার্ড লাগবে।</li>
+          <li>ফোন নাম্বার লাগবে।</li>
+          <li>জিমেইল লাগবে।</li>
+        </ul>
+    <p><strong>Promo Code:</strong> <span class="promo">Oxy11</span></p>
+           <p><strong>সরাসরি আমাদের থেকে আইডি করে নিন । আইডি করতে দ্রুত যোগাযোগ করুন টেলিগ্রাম এ ।</strong</p>
+    <p><strong>Contact:</strong> <a href="tel:+8801826444505">+8801826444505</a> (Telegram / WhatsApp / IMO)</p>
+      </section>
+    
     <section id="agent" class="agent-section">
   <h2>♦️ লোকাল এজেন্ট ♦️</h2>
   <p>ডিপোজিট ও উইথড্র এখন খুব সহজ! আমার মাধ্যমে আপনি দ্রুত এবং নিরাপদভাবে লেনদেন করতে পারবেন ২৪/৭।</p>
