--- a/index.html
+++ b/index.html
@@ -80,14 +80,18 @@
     <h2>আমার একটি আইডি লাগবে!</h2>
         <h3>ফুল ভেরিফাইড করতে যা লাগবে </h3>
         <ul>
-          <li>আপনার একটি এন্ড্রয়েড স্মার্ট ফোন লাগবে।</li>
           <li>NID কার্ড লাগবে।</li>
           <li>ফোন নাম্বার লাগবে।</li>
           <li>জিমেইল লাগবে।</li>
         </ul>
     <p><strong>Promo Code:</strong> <span class="promo">Oxy11</span></p>
            <p><strong>সরাসরি আমাদের থেকে আইডি করে নিন । আইডি করতে দ্রুত যোগাযোগ করুন টেলিগ্রাম এ ।</strong</p>
-    <p><strong>Contact:</strong> <a href="tel:+8801826444505">+8801826444505</a> (Telegram / WhatsApp / IMO)</p>
+  <div class="telegram-join">
+  <a href="https://t.me/+MeoTD85pHfo5YzU1" target="_blank">
+    <img src="https://img.icons8.com/color/48/telegram-app--v1.png" alt="Telegram" />
+    Join Our Telegram Group
+  </a>
+</div>
       </section>
     
     <section id="agent" class="agent-section">
