--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <div class="telegram-join">
   <a href="https://t.me/+MeoTD85pHfo5YzU1" target="_blank">
     <img src="https://img.icons8.com/color/48/telegram-app--v1.png" alt="Telegram" />
-    Join Our Telegram Group
+    Join Telegram
   </a>
 </div>
       </section>
