--- a/index.html
+++ b/index.html
@@ -76,16 +76,14 @@
       </div>
     </section>
 
-      <section id="promo-section">
+      <section class="brand-section" id="linebet">
     <h2>আমার একটি আইডি লাগবে!</h2>
-        <h3>ফুল ভেরিফাইড করতে যা লাগবে </h3>
         <ul>
           <li>NID কার্ড লাগবে।</li>
           <li>ফোন নাম্বার লাগবে।</li>
           <li>জিমেইল লাগবে।</li>
         </ul>
     <p><strong>Promo Code:</strong> <span class="promo">Oxy11</span></p>
-           <p><strong>সরাসরি আমাদের থেকে আইডি করে নিন । আইডি করতে দ্রুত যোগাযোগ করুন টেলিগ্রাম এ ।</strong</p>
   <div class="telegram-join">
   <a href="https://t.me/+MeoTD85pHfo5YzU1" target="_blank">
     <img src="https://img.icons8.com/color/48/telegram-app--v1.png" alt="Telegram" />
