--- a/index.html
+++ b/index.html
@@ -67,16 +67,16 @@
       <div class="tag-popular"> Most Popular</div>
 
       <h2>Linebet</h2>
-      <a href="https://linebet-login.netlify.app/" class="join-btn" target="_blank">Register👉 Linebet</a>
+      <a href="https://bangladesh.bonus-linebet.com/oxy11" class="join-btn" target="_blank">Register👉 Linebet</a>
       <p class="payment-info">Payment: bKash, Nagad, Rocket</p>
       <div class="category-links">
-        <a href="https://linebet-login.netlify.app/" target="_blank">Sports</a>
-        <a href="https://linebet-login.netlify.app/" target="_blank">Casino</a>
-        <a href="https://linebet-login.netlify.app/" target="_blank">Slots</a>
+        <a href="https://linebet.press/oxy11" target="_blank">Sports</a>
+        <a href="https://linebet.press/oxy11" target="_blank">Casino</a>
+        <a href="https://bangladesh.bonus-linebet.com/oxy11" target="_blank">Slots</a>
       </div>
     </section>
 
-      <section class="brand-section" id="linebet">
+  <section id="promo-section">
     <h2>আমার একটি আইডি লাগবে!</h2>
         <ul>
           <li>NID কার্ড লাগবে।</li>
