--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <a href="https://1xbet6767.netlify.app/" class="join-btn" target="_blank">Register👉 1xbet</a>
       <p class="payment-info">Payment: bKash, Nagad, Rocket</p>
       <div class="category-links">
-        <a href="https://1xbet6767.netlify.app/" target="_blank">Sports</a>
+        <a href="https://1xbet6767.netlify.app/" target="_blank">sports</a>
         <a href="https://1xbet6767.netlify.app/" target="_blank">Casino</a>
         <a href="https://1xbet6767.netlify.app/" target="_blank">Slots</a>
       </div>
@@ -70,9 +70,9 @@
       <a href="https://bangladesh.bonus-linebet.com/oxy11" class="join-btn" target="_blank">Register👉 Linebet</a>
       <p class="payment-info">Payment: bKash, Nagad, Rocket</p>
       <div class="category-links">
-        <a href="https://linebet.press/oxy11" target="_blank">Sports</a>
-        <a href="https://linebet.press/oxy11" target="_blank">Casino</a>
-        <a href="https://bangladesh.bonus-linebet.com/oxy11" target="_blank">Slots</a>
+        <a href="https://linebet.press/oxy11" target="_blank">ফ্রী স্পিন নিন</a>
+        <a href="https://linebet.press/oxy11" target="_blank">লিঙ্ক 1</a>
+        <a href="https://bangladesh.bonus-linebet.com/oxy11" target="_blank">লিঙ্ক 2</a>
       </div>
     </section>
 
@@ -126,12 +126,12 @@
     <section class="brand-section" id="plnbet">
       <div class="tag-popular"> New 🌍</div>
       <h2>PlanBet</h2>
-      <a href="https://plnbet6767.netlify.app/" class="join-btn" target="_blank"> Register👉 Planbet</a>
+      <a href="https://planbet.me/Oxy11" class="join-btn" target="_blank"> Register👉 Planbet</a>
       <p class="payment-info">Payment: bKash, Nagad, Rocket</p>
       <div class="category-links">
-        <a href="https://plnbet6767.netlify.app/" target="_blank">Sports</a>
-        <a href="https://plnbet6767.netlify.app/" target="_blank">Casino</a>
-        <a href="https://plnbet6767.netlify.app/" target="_blank">Slots</a>
+        <a href="https://planbet.me/Oxy11" target="_blank">Sports</a>
+        <a href="https://planbet.me/Oxy11" target="_blank">Casino</a>
+        <a href="https://planbet.me/Oxy11" target="_blank">Slots</a>
       </div>
     </section>
   </div>
