--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
       <div class="tag-popular"> Most Popular</div>
 
       <h2>1xbet</h2>
-      <a href="https://1xbet6767.netlify.app/" class="join-btn" target="_blank">Register👉 1xbet</a>
+      <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=registration?type=fast&bonus=SPORT" class="join-btn" target="_blank">Register👉 1xbet</a>
       <p class="payment-info">Payment: bKash, Nagad, Rocket</p>
       <div class="category-links">
-        <a href="https://1xbet6767.netlify.app/" target="_blank">sports</a>
-        <a href="https://1xbet6767.netlify.app/" target="_blank">Casino</a>
-        <a href="https://1xbet6767.netlify.app/" target="_blank">Slots</a>
+        <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=registration?type=fast&bonus=SPORT" target="_blank">sports</a>
+        <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=registration?type=fast&bonus=SPORT" target="_blank">Casino</a>
+        <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=registration?type=fast&bonus=SPORT" target="_blank">Slots</a>
       </div>
     </section>
 
