--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <header style="text-align: center; padding: 20px;">
+  <img src="images/logo.png" alt="AllsiteBD Logo" style="max-width: 200px;">
+  </header>
   <header>
     <h2>Welcome Oxy Club</h2>
     <p>Choose your platform & start winning!</p>
