--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </section>
 
     <!-- Melbet Section -->
-    <section id="promo-section">
+    <section class="brand-section" id="melbet">
       <div class="tag-popular"> Recommand</div>
       
       <h2>Melbet</h2>
