--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <p class="payment-info">Payment: bKash, Nagad, Rocket</p>
       <div class="category-links">
         <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=registration?type=fast&bonus=SPORT" target="_blank">sports</a>
-        <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=casino/1xlive" target="_blank">Casino</a>
+        <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=casino/1xlive" target="_blank"> Go To Casino</a>
         <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=registration?type=fast&bonus=SPORT" target="_blank">Slots</a>
       </div>
     </section>
