--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
       <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=registration?type=fast&bonus=SPORT" class="join-btn" target="_blank">Register👉 1xbet</a>
       <p class="payment-info">Payment: bKash, Nagad, Rocket</p>
       <div class="category-links">
-        <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=registration?type=fast&bonus=SPORT" target="_blank">sports</a>
+        <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=registration?type=fast&bonus=SPORT" target="_blank">Go To sports</a>
         <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=casino/1xlive" target="_blank"> Go To Casino</a>
-        <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=registration?type=fast&bonus=SPORT" target="_blank">Slots</a>
+        <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=registration?type=fast&bonus=SPORT" target="_blank">Go To Slots</a>
       </div>
     </section>
 
@@ -70,9 +70,9 @@
       <a href="https://bangladesh.bonus-linebet.com/oxy11" class="join-btn" target="_blank">Register👉 Linebet</a>
       <p class="payment-info">Payment: bKash, Nagad, Rocket</p>
       <div class="category-links">
-        <a href="https://linebet.press/oxy11" target="_blank">ফ্রী স্পিন নিন</a>
-        <a href="https://linebet.press/oxy11" target="_blank">লিঙ্ক 1</a>
-        <a href="https://bangladesh.bonus-linebet.com/oxy11" target="_blank">লিঙ্ক 2</a>
+        <a href="https://linebet.press/oxy11" target="_blank">Free Spin</a>
+        <a href="https://linebet.press/oxy11" target="_blank">Link 1</a>
+        <a href="https://bangladesh.bonus-linebet.com/oxy11" target="_blank">Link 2</a>
       </div>
     </section>
 
