--- a/index.html
+++ b/index.html
@@ -136,6 +136,21 @@
     </section>
   </div>
 
+  
+    <!-- betwiner Section -->
+    <section class="brand-section" id="linebet">
+      <div class="tag-popular"> Smrat </div>
+
+      <h2>Linebet</h2>
+      <a href="https://bw-prm.com/chicke-road-3-lite/?p=%2Fregistration%2F&s1=Oxy11&id=1KPH" class="join-btn" target="_blank">Register👉 Linebet</a>
+      <p class="payment-info">Payment: bKash, Nagad, Rocket</p>
+      <div class="category-links">
+        <a href="https://bw-prm.com/chicke-road-3-lite/?p=%2Fregistration%2F&s1=Oxy11&id=1KPH" target="_blank">Casino</a>
+        <a href="https://bw-prm.com/chicke-road-3-lite/?p=%2Fregistration%2F&s1=Oxy11&id=1KPH" target="_blank">Sports</a>
+        <a href="https://bw-prm.com/chicke-road-3-lite/?p=%2Fregistration%2F&s1=Oxy11&id=1KPH" target="_blank">Slots</a>
+      </div>
+    </section>
+
   <!-- Telegram Join Button -->
 <div class="telegram-join">
   <a href="https://t.me/+MeoTD85pHfo5YzU1" target="_blank">
