--- a/index.html
+++ b/index.html
@@ -40,13 +40,7 @@
 
 </body>
 </html>
-
-  <!-- Promo Code + Contact Section -->
-  <section id="promo-section">
-    <h2>🎁 Get Your Bonus Now!</h2>
-    <p><strong>Promo Code:</strong> <span class="promo">Oxy11</span></p>
-    <p><strong>Contact:</strong> <a href="tel:+8801826444505">+8801826444505</a> (Telegram / WhatsApp / IMO)</p>
-  </section>
+  
   <div id="combo-container">
     <!-- 1xBet Section -->
     <section class="brand-section" id="x1bet">
@@ -76,40 +70,8 @@
       </div>
     </section>
 
-  <section id="promo-section">
-    <h2>আমার একটি আইডি লাগবে!</h2>
-        <ul>
-          <li>NID কার্ড লাগবে।</li>
-          <li>ফোন নাম্বার লাগবে।</li>
-          <li>জিমেইল লাগবে।</li>
-        </ul>
-    <p><strong>Promo Code:</strong> <span class="promo">Oxy11</span></p>
-  <div class="telegram-join">
-  <a href="https://t.me/+MeoTD85pHfo5YzU1" target="_blank">
-    <img src="https://img.icons8.com/color/48/telegram-app--v1.png" alt="Telegram" />
-    Join Telegram
-  </a>
-</div>
-      </section>
-    
-    <section id="agent" class="agent-section">
-  <h2>♦️ লোকাল এজেন্ট ♦️</h2>
-  <p>ডিপোজিট ও উইথড্র এখন খুব সহজ! আমার মাধ্যমে আপনি দ্রুত এবং নিরাপদভাবে লেনদেন করতে পারবেন ২৪/৭।</p>
-  
-  <div class="agent-features">
-    <ul>
-      <li>✅ 1xBet, Linebet, Melbet, PlanBet – সব সাইটের জন্য সাপোর্ট</li>
-      <li>💳 বিকাশ, নগদ, রকেট ও ব্যাংক ট্রান্সফার সুবিধা</li>
-      <li>⚡ ইনস্ট্যান্ট পেমেন্ট – কোনো ঝামেলা ছাড়াই</li>
-      <li>🔒 ১০০% নিরাপদ ও বিশ্বস্ত লেনদেন</li>
-    </ul>
-  </div>
-
-  <a href="https://t.me/+MeoTD85pHfo5YzU1" class="btn-agent" target="_blank">📩 Telegram-এ সরাসরি যোগাযোগ করুন</a>
-    </section>
-
     <!-- Melbet Section -->
-    <section class="brand-section" id="melbet">
+    <section class="brand-section" id="plnbet">
       <div class="tag-popular"> Recommand</div>
       
       <h2>Melbet</h2>
@@ -123,7 +85,7 @@
     </section>
 
     <!-- PlnBet Section -->
-    <section class="brand-section" id="plnbet">
+    <section class="brand-section" id="linebet">
       <div class="tag-popular"> New 🌍</div>
       <h2>PlanBet</h2>
       <a href="https://planbet.me/Oxy11" class="join-btn" target="_blank"> Register👉 Planbet</a>
@@ -150,6 +112,13 @@
         <a href="https://bw-prm.com/chicke-road-3-lite/?p=%2Fregistration%2F&s1=Oxy11&id=1KPH" target="_blank">Slots</a>
       </div>
     </section>
+
+    <!-- Promo Code + Contact Section -->
+  <section id="promo-section">
+    <h2>🎁 Get Your Bonus Now!</h2>
+    <p><strong>Promo Code:</strong> <span class="promo">Oxy11</span></p>
+    <p><strong>Contact:</strong> <a href="tel:+8801826444505">+8801826444505</a> (Telegram / WhatsApp / IMO)</p>
+  </section>
 
   <!-- Telegram Join Button -->
 <div class="telegram-join">
