--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>AllSiteBD</h1>
+    <h1>Oxy Club</h1>
     <p>Choose your platform & start winning!</p>
   </header>
 <!DOCTYPE html>
@@ -101,7 +101,7 @@
   
     <!-- betwiner Section -->
     <section class="brand-section" id="linebet">
-      <div class="tag-popular"> Smrat </div>
+      <div class="tag-popular"> Promo Code- Oxy11</div>
 
       <h2>Betwinner</h2>
       <a href="https://bw-prm.com/chicke-road-3-lite/?p=%2Fregistration%2F&s1=Oxy11&id=1KPH" class="join-btn" target="_blank">Register👉 Betwiner</a>
@@ -124,12 +124,12 @@
 <div class="telegram-join">
   <a href="https://t.me/+MeoTD85pHfo5YzU1" target="_blank">
     <img src="https://img.icons8.com/color/48/telegram-app--v1.png" alt="Telegram" />
-    Join Our Telegram Group
+    Join Telegram
   </a>
 </div>
 
   <footer>
-    <p>© 2025 Club Earn BD. All Rights Reserved.</p>
+    <p>© 2025 Official Site. All Rights Reserved.</p>
   </footer>
 </body>
 </html>
