--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   
     <!-- betwiner Section -->
     <section class="brand-section" id="linebet">
-      <div class="tag-popular"> Promo Code- Oxy11</div>
+      <div class="tag-popular"> Promo </div>
 
       <h2>Betwinner</h2>
       <a href="https://bw-prm.com/chicke-road-3-lite/?p=%2Fregistration%2F&s1=Oxy11&id=1KPH" class="join-btn" target="_blank">Register👉 Betwiner</a>
