--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <title>Marquee Example</title>
   <style>
     .marquee-wrapper {
-      background: linear-gradient(90deg, #0f172a, #1e3a8a);
+      background: linear-gradient(90deg, #0f172a, #000080);
       padding: 8px 0;
       color: #ffeb3b;
       font-size: 14px;
