--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <section class="brand-section" id="x1bet">
       <div class="tag-popular"> Most Popular</div>
 
-      <h2>1xbet</h2>
+      <div class="tag-popular"><h2>1xbet</h2></div>
       <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=registration?type=fast&bonus=SPORT" class="join-btn" target="_blank">Register👉 1xbet</a>
       <p class="payment-info">Payment: bKash, Nagad, Rocket</p>
       <div class="category-links">
