--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <div id="combo-container">
     <!-- 1xBet Section -->
     <section class="brand-section" id="x1bet">
-      <div class="tag-popular"> Most Popular</div>
+      <div class="tag-popular">Popular</div>
 
       <h2>1xbet</h2>
       <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=registration?type=fast&bonus=SPORT" class="join-btn" target="_blank">Register👉 1xbet</a>
@@ -58,7 +58,7 @@
 
     <!-- Linebet Section -->
     <section class="brand-section" id="linebet">
-      <div class="tag-popular"> Most Popular</div>
+      <div class="tag-popular">Popular</div>
 
       
       <h2>Linebet</h2>
