--- a/index.html
+++ b/index.html
@@ -40,6 +40,37 @@
 
 </body>
 </html>
+
+  <!DOCTYPE html>
+<html lang="bn">
+<head>
+  <meta charset="UTF-8">
+  <title>Realistic Stats</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+  <section id="stats" class="stats-section">
+    <h2>আমাদের সঙ্গে যুক্ত হচ্ছেন প্রতিদিন হাজারো মানুষ!</h2>
+    <div class="stats-container">
+      <div class="stat-box">
+        <h3 id="usersJoined">0</h3>
+        <p>মোট ইউজার জয়েন করেছেন</p>
+      </div>
+      <div class="stat-box">
+        <h3 id="bonusGiven">0</h3>
+        <p>ফ্রি বোনাস পেয়েছেন</p>
+      </div>
+      <div class="stat-box">
+        <h3 id="todayJoined">0</h3>
+        <p>আজ জয়েন করেছেন</p>
+      </div>
+    </div>
+  </section>
+
+  <script src="script.js"></script>
+</body>
+</html>
   
   <div id="combo-container">
     <!-- 1xBet Section -->
