--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
       <div class="stat-box">
         <h3 id="bonusGiven">0</h3>
         <p>ফ্রি বোনাস পেয়েছেন</p>
+        <div class="stat-box">
+  <h3>1,524+</h3>
+  <p>ফ্রি বোনাস পেয়েছে</p>
+  <a href="https://refpa3267686.top/L?tag=d_905607m_1622c_2023&site=905607&ad=1622" target="_blank" class="claim-btn">Claim Bonus</a>
+        </div>
       </div>
       <div class="stat-box">
         <h3 id="todayJoined">0</h3>
