--- a/index.html
+++ b/index.html
@@ -41,36 +41,6 @@
 </body>
 </html>
 
-  <!DOCTYPE html>
-<html lang="bn">
-<head>
-  <meta charset="UTF-8">
-  <title>Realistic Stats</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-  <section id="stats" class="stats-section">
-    <h2>আমাদের সঙ্গে যুক্ত হচ্ছেন !</h2>
-    <div class="stats-container">
-      <div class="stat-box">
-        <h3 id="usersJoined">0</h3>
-        <p>মোট ইউজার জয়েন করেছেন</p>
-      </div>
-      <div class="stat-box">
-        <h3 id="bonusGiven">0</h3>
-        <p>ফ্রি বোনাস পেয়েছেন</p>
-        <div class="stat-box">
-  <a href="https://refpa3267686.top/L?tag=d_905607m_1622c_2023&site=905607&ad=1622" target="_blank" class="claim-btn">Claim Bonus</a>
-        </div>
-      </div>
-      <div class="stat-box">
-        <h3 id="todayJoined">0</h3>
-        <p>আজ জয়েন করেছেন</p>
-      </div>
-    </div>
-  </section>
-
   <script src="script.js"></script>
 </body>
 </html>
@@ -84,7 +54,35 @@
       <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=registration?type=fast&bonus=SPORT" class="join-btn" target="_blank">Register👉 1xbet</a>
       <p class="payment-info">Payment: bKash, Nagad, Rocket</p>
       <div class="category-links">
-        <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=registration?type=fast&bonus=SPORT" target="_blank"> sports</a>
+        <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&si<!DOCTYPE html>
+<html lang="bn">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Free Bonus Stats</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+  <section class="stats-section">
+    <h2 class="section-title">আমাদের সফলতা</h2>
+    <div class="stats-container">
+      <div class="stat-box">
+        <a href="https://refpa3267686.top/L?tag=d_905607m_1622c_2023&site=905607&ad=1622" class="claim-btn" target="_blank">Claim Bonus</a>
+      </div>
+      <div class="stat-box">
+        <p>ইউজার জয়েন করেছে</p>
+        <a href="https://refpa3267686.top/L?tag=d_905607m_1622c_2023&site=905607&ad=1622" class="claim-btn" target="_blank">Join Now</a>
+      </div>
+      <div class="stat-box">
+        <p>আজকে জয়েন</p>
+        <a href="https://refpa3267686.top/L?tag=d_905607m_1622c_2023&site=905607&ad=1622" class="claim-btn" target="_blank">Join Today</a>
+      </div>
+    </div>
+  </section>
+
+</body>
+        </html>te=905607&ad=1236&r=registration?type=fast&bonus=SPORT" target="_blank"> sports</a>
         <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=casino/1xlive" target="_blank"> Casino</a>
         <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=registration?type=fast&bonus=SPORT" target="_blank">Slots</a>
       </div>
