--- a/index.html
+++ b/index.html
@@ -64,22 +64,23 @@
 </head>
 <body>
 
-  <section class="stats-section">
-    <h2 class="section-title">আমাদের সফলতা</h2>
-    <div class="stats-container">
-      <div class="stat-box">
-        <a href="https://refpa3267686.top/L?tag=d_905607m_1622c_2023&site=905607&ad=1622" class="claim-btn" target="_blank">Claim Bonus</a>
-      </div>
-      <div class="stat-box">
-        <p>ইউজার জয়েন করেছে</p>
-        <a href="https://refpa3267686.top/L?tag=d_905607m_1622c_2023&site=905607&ad=1622" class="claim-btn" target="_blank">Join Now</a>
-      </div>
-      <div class="stat-box">
-        <p>আজকে জয়েন</p>
-        <a href="https://refpa3267686.top/L?tag=d_905607m_1622c_2023&site=905607&ad=1622" class="claim-btn" target="_blank">Join Today</a>
-      </div>
-    </div>
-  </section>
+  <div class="stats-container">
+  <div class="stat-box">
+    <h3>1,524+</h3>
+    <p>ফ্রি বোনাস পেয়েছে</p>
+    <a href="#" class="claim-btn">Claim Bonus</a>
+  </div>
+  <div class="stat-box">
+    <h3>7,891+</h3>
+    <p>ইউজার জয়েন করেছে</p>
+    <a href="#" class="claim-btn">Join Now</a>
+  </div>
+  <div class="stat-box">
+    <h3>298+</h3>
+    <p>আজকে জয়েন</p>
+    <a href="#" class="claim-btn">Join Today</a>
+  </div>
+  </div>
 
 </body>
         </html>te=905607&ad=1236&r=registration?type=fast&bonus=SPORT" target="_blank"> sports</a>
