--- a/index.html
+++ b/index.html
@@ -54,34 +54,8 @@
       <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=registration?type=fast&bonus=SPORT" class="join-btn" target="_blank">Register👉 1xbet</a>
       <p class="payment-info">Payment: bKash, Nagad, Rocket</p>
       <div class="category-links">
-        <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&si<!DOCTYPE html>
-<html lang="bn">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Free Bonus Stats</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-  <div class="stats-container">
-  <div class="stat-box">
-    <h3>1,524+</h3>
-    <p>ফ্রি বোনাস পেয়েছে</p>
-    <a href="#" class="claim-btn">Claim Bonus</a>
-  </div>
-  <div class="stat-box">
-    <h3>7,891+</h3>
-    <p>ইউজার জয়েন করেছে</p>
-    <a href="#" class="claim-btn">Join Now</a>
-  </div>
-  <div class="stat-box">
-    <h3>298+</h3>
-    <p>আজকে জয়েন</p>
-    <a href="#" class="claim-btn">Join Today</a>
-  </div>
-  </div>
-
+        <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&si</a>
+          
 </body>
         </html>te=905607&ad=1236&r=registration?type=fast&bonus=SPORT" target="_blank"> sports</a>
         <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=casino/1xlive" target="_blank"> Casino</a>
