--- a/index.html
+++ b/index.html
@@ -129,6 +129,40 @@
     <p><strong>Contact:</strong> <a href="tel:+8801826444505">+8801826444505</a> (Telegram / WhatsApp / IMO)</p>
   </section>
 
+<!DOCTYPE html>
+<html lang="bn">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Free Bonus Stats</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+  <section class="stats-section">
+    <h2 class="section-title">আমাদের সফলতা</h2>
+    <div class="stats-container">
+      <div class="stat-box">
+        <h3>1,524+</h3>
+        <p>ফ্রি বোনাস পেয়েছে</p>
+        <a href="https://refpa3267686.top/L?tag=d_905607m_1622c_2023&site=905607&ad=1622" class="claim-btn" target="_blank">Claim Bonus</a>
+      </div>
+      <div class="stat-box">
+        <h3>7,891+</h3>
+        <p>ইউজার জয়েন করেছে</p>
+        <a href="https://refpa3267686.top/L?tag=d_905607m_1622c_2023&site=905607&ad=1622" class="claim-btn" target="_blank">Join Now</a>
+      </div>
+      <div class="stat-box">
+        <h3>298+</h3>
+        <p>আজকে জয়েন</p>
+        <a href="https://refpa3267686.top/L?tag=d_905607m_1622c_2023&site=905607&ad=1622" class="claim-btn" target="_blank">Join Today</a>
+      </div>
+    </div>
+  </section>
+
+</body>
+</html>
+
   <!-- Telegram Join Button -->
 <div class="telegram-join">
   <a href="https://t.me/+MeoTD85pHfo5YzU1" target="_blank">
