--- a/index.html
+++ b/index.html
@@ -139,27 +139,35 @@
 </head>
 <body>
 
-  <section class="stats-section">
-    <h2 class="section-title">আমাদের সফলতা</h2>
-    <div class="stats-container">
-      <div class="stat-box">
-        <h3>1,524+</h3>
-        <p>ফ্রি বোনাস পেয়েছে</p>
-        <a href="https://refpa3267686.top/L?tag=d_905607m_1622c_2023&site=905607&ad=1622" class="claim-btn" target="_blank">Claim Bonus</a>
-      </div>
-      <div class="stat-box">
-        <h3>7,891+</h3>
-        <p>ইউজার জয়েন করেছে</p>
-        <a href="https://refpa3267686.top/L?tag=d_905607m_1622c_2023&site=905607&ad=1622" class="claim-btn" target="_blank">Join Now</a>
-      </div>
-      <div class="stat-box">
-        <h3>298+</h3>
-        <p>আজকে জয়েন</p>
-        <a href="https://refpa3267686.top/L?tag=d_905607m_1622c_2023&site=905607&ad=1622" class="claim-btn" target="_blank">Join Today</a>
-      </div>
+<!DOCTYPE html>
+<html lang="bn">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>User Attraction Stats</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+
+  <section class="stats-container">
+    <div class="stat-box">
+      <h3 id="stat1-number">1,500+</h3>
+      <p>নতুন ইউজার জয়েন করেছে</p>
+      <a href="https://refpa3267686.top/L?tag=d_905607m_1622c_2023&site=905607&ad=1622" target="_blank" class="claim-btn">Claim Bonus</a>
+    </div>
+    <div class="stat-box">
+      <h3 id="stat2-number">3,200+</h3>
+      <p>ডিপোজিট করেছে</p>
+      <a href="https://refpa3267686.top/L?tag=d_905607m_1622c_2023&site=905607&ad=1622" target="_blank" class="claim-btn">Claim Bonus</a>
+    </div>
+    <div class="stat-box">
+      <h3 id="stat3-number">1,000+</h3>
+      <p>ফ্রি বোনাস পেয়েছে</p>
+      <a href="https://refpa3267686.top/L?tag=d_905607m_1622c_2023&site=905607&ad=1622" target="_blank" class="claim-btn">Claim Bonus</a>
     </div>
   </section>
 
+  <script src="script.js"></script>
 </body>
 </html>
 
