--- a/index.html
+++ b/index.html
@@ -149,27 +149,41 @@
 </head>
 <body>
 
-  <section class="stats-container">
-    <div class="stat-box">
-      <h3 id="stat1-number">1,500+</h3>
-      <p>নতুন ইউজার জয়েন করেছে</p>
-      <a href="https://refpa3267686.top/L?tag=d_905607m_1622c_2023&site=905607&ad=1622" target="_blank" class="claim-btn">Claim Bonus</a>
-    </div>
-    <div class="stat-box">
-      <h3 id="stat2-number">3,200+</h3>
-      <p>ডিপোজিট করেছে</p>
-      <a href="https://refpa3267686.top/L?tag=d_905607m_1622c_2023&site=905607&ad=1622" target="_blank" class="claim-btn">Claim Bonus</a>
-    </div>
-    <div class="stat-box">
-      <h3 id="stat3-number">1,000+</h3>
-      <p>ফ্রি বোনাস পেয়েছে</p>
-      <a href="https://refpa3267686.top/L?tag=d_905607m_1622c_2023&site=905607&ad=1622" target="_blank" class="claim-btn">Claim Bonus</a>
-    </div>
-  </section>
+  <!DOCTYPE html>
+<html lang="bn">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Stats Section</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
-  <script src="script.js"></script>
+<section id="stats" class="stats-section">
+  <h2>আমাদের সঙ্গে যুক্ত হচ্ছেন প্রতিদিন হাজারো মানুষ!</h2>
+  <div class="stats-container">
+    <div class="stat-box">
+      <h3 id="usersJoined">1,204</h3>
+      <p>মোট ইউজার জয়েন করেছেন</p>
+      <a href="https://your-link.com" class="join-btn">Join Now</a>
+    </div>
+    <div class="stat-box">
+      <h3 id="bonusGiven">734</h3>
+      <p>ফ্রি বোনাস পেয়েছেন</p>
+      <a href="https://your-link.com" class="join-btn">Join Now</a>
+    </div>
+    <div class="stat-box">
+      <h3 id="todayJoined">0</h3>
+      <p>আজ জয়েন করেছেন</p>
+      <a href="https://your-link.com" class="join-btn">Join Now</a>
+    </div>
+  </div>
+</section>
+
+<script src="script.js"></script>
 </body>
 </html>
+
 
   <!-- Telegram Join Button -->
 <div class="telegram-join">
