--- a/index.html
+++ b/index.html
@@ -160,22 +160,22 @@
 <body>
 
 <section id="stats" class="stats-section">
-  <h2>আমাদের সঙ্গে যুক্ত হচ্ছেন প্রতিদিন হাজারো মানুষ!</h2>
+  <h2>আমাদের সঙ্গে যুক্ত হচ্ছে</h2>
   <div class="stats-container">
     <div class="stat-box">
       <h3 id="usersJoined">1,204</h3>
       <p>মোট ইউজার জয়েন করেছেন</p>
-      <a href="https://your-link.com" class="join-btn">Join Now</a>
+      <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=registration?type=fast&bonus=SPORT" class="join-btn">Join Now</a>
     </div>
     <div class="stat-box">
       <h3 id="bonusGiven">734</h3>
       <p>ফ্রি বোনাস পেয়েছেন</p>
-      <a href="https://your-link.com" class="join-btn">Join Now</a>
+      <a href="https://linebet.press/oxy11" class="join-btn">Join Now</a>
     </div>
     <div class="stat-box">
       <h3 id="todayJoined">0</h3>
       <p>আজ জয়েন করেছেন</p>
-      <a href="https://your-link.com" class="join-btn">Join Now</a>
+      <a href="https://lineforbd.com/oxy11" class="join-btn">Register</a>
     </div>
   </div>
 </section>
