--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     <div class="stat-box">
       <h3 id="bonusGiven">734</h3>
       <p>ফ্রি বোনাস পেয়েছেন</p>
-      <a href="https://linebet.press/oxy11" class="join-btn">Join Now</a>
+      <a href="https://linebet.press/oxy11" class="join-btn">Claim Bonus</a>
     </div>
     <div class="stat-box">
       <h3 id="todayJoined">0</h3>
