--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <!-- Open Graph Meta Tags without image -->
+<meta property="og:title" content="Join 1xBet & Linebet - Official Affiliate">
+<meta property="og:description" content="Get your bonus now. Safe & Fast registration.">
+<meta property="og:url" content="https://allsitebd.netlify.app/">
+<meta name="twitter:card" content="summary">
   <title>এশিয়ার সেরা ব্যাটিং সাইট</title>
   <link rel="stylesheet" href="style.css" />
 </head>
