--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <!-- Open Graph Meta Tags without image -->
-<meta property="og:title" content="Join 1xBet & Linebet - Official Affiliate">
+<meta property="og:title" content="Join 1xBet & Linebet Promo Code- Oxy11">
 <meta property="og:description" content="Get your bonus now. Safe & Fast registration.">
 <meta property="og:url" content="https://allsitebd.netlify.app/">
 <meta name="twitter:card" content="summary">
